# Sapeon-Frontend-Compiler

./: .gitignore  Doxyfile  Makefile  README(FrontCompiler).md  README.md  config_docs.txt  model_gen.py  old_README.md  requirements.txt  setup.py
simulator/: .gitignore  CMakeLists.txt  README.md  UROP.md  old_README.md  setup.py  test_cpu
simulator/configs/preprocess/: edsr_x3_rearranged.json  keras_vgg16.json  no_preprocess.json  resnet50.json  resnet50_no_connected.json  resnet50_torch.json
simulator/configs/quantization/: calib_astat.in  calib_cfg  new_calib_astat.in
simulator/configs/quantization/x330/: all_nf8.cfg  mish.lut  resnet50.base_nf8_nf8u.cfg  resnet50.base_nf8_nf8u.in_nf10.out_nf16.cfg  resnet50.base_nf8_nf8u.in_nf16.cfg  resnet50.base_nf8_nf8u.io_nf16.cfg  resnet50.base_nf8_only.cfg  resnet50.base_nf8_only.in_nf16.cfg  resnet50.base_nf8_only.io_nf16.cfg  resnet50.dtype.01.cfg  resnet50.dtype.02.cfg  resnet50.dtype.03.cfg  resnet50.dtype.04.cfg  resnet50.dtype.05.cfg  resnet50.dtype.06.cfg  resnet50.dtype.07.cfg  resnet50.dtype.08.cfg  resnet50.dtype.09.cfg  resnet50.dtype.10.cfg  resnet50.dtype.11.cfg  resnet50.dtype.12.cfg  resnet50.dtype.13.cfg  resnet50.dtype.14.cfg  resnet50.dtype.15.cfg  resnet50.dtype.16.cfg  resnet50.dtype.17.cfg  resnet50.dtype.18.cfg  resnet50.ebias.1.cfg  resnet50.ebias.2.cfg  resnet50.ebias.3.cfg  resnet50.ebias.4.cfg  resnet50.fcalib.1.cfg  resnet50.fcalib.2.cfg  resnet50.fcalib.3.cfg  resnet50.fcalib.4.cfg  resnet50.fcalib.5.cfg  resnet50.fcalib.6.cfg  resnet50.rmode.1.cfg  resnet50.rmode.2.cfg  resnet50.rmode.3.cfg  (+15 more)
simulator/docker/: Dockerfile  aixgraph.dockerfile  docker-cpu-dockerfiile-image.yml  docker_build.sh  docker_build_cpu.sh  docker_run.sh  docker_run_cpu.sh  entrypoint.sh
simulator/include/: aixh.pb.h  arguments.hpp  datatype.hpp  factory.hpp  image.hpp  inference_context.hpp  simulator_api.hpp  spear.proto.e8e8.pb.h  utility.hpp
simulator/include/backends/: backend.hpp  backend_input_helper.hpp  cpu.hpp  cudnn.hpp
simulator/include/backends/delegate/: calibration_delegate.hpp  calibration_dump_helper.hpp  classification_validation_helper.hpp  collect_delegate.hpp  default_calibration_delegate.hpp  delegate_factory.hpp  dummy_calibration_delegate.hpp  (+18 more)
simulator/include/calibration/: calibrator.hpp  calibrator_factory.hpp  entropy2_calibrator.hpp  entropy_calibrator.hpp  histogram.hpp  histogram_calibrator.hpp  max.hpp  max_calibrator.hpp  percentile_calibrator.hpp
simulator/include/dump/: dump.hpp  dump_binary.hpp  dump_factory.hpp  dump_hex.hpp  dump_output.hpp  dump_path_helper.hpp  dump_space.hpp
simulator/include/enums/: activation_names.hpp  calibration.hpp  dump.hpp  error.hpp  operation_names.hpp  to_underlying_type.hpp
simulator/include/network/: descriptor.hpp  dimension.hpp  layer.hpp  network.hpp  tensor.hpp
simulator/include/operations/: cpu_operation.hpp  cudnn_operation.hpp
simulator/include/parser/: aix_graph_parser.hpp  parser.hpp  spear_graph_parser.hpp
simulator/include/x220/: aixh_common.h  aixh_mxc.h  quant_config.hpp
simulator/include/x330/: aixv_base.h  aixv_float.h  aixv_utils.h  quant_config.hpp  x330_operation.hpp
simulator/outputs/: network.input  network.input.binary  network.output
simulator/proto_files/: aixh.proto  layer_type.txt  spear.proto.e8e8  spear.proto.v1.1.1  spear.proto.v1.2
simulator/pyspear/: .gitignore  .pylintrc  README.md  bootstrap.sh  compile_proto.sh  main.py  requirements.txt  run_main.sh  run_test.sh  setup.py
simulator/pyspear/example/: resnet18_b-1.py  run_example.sh
simulator/python/: calibrator.cpp  calibrator.hpp  numpy.cpp  numpy.hpp  pyspsim.cmake  spsim.cpp
simulator/python/example/: calibrate.py
simulator/scripts/: bootstrap.sh  build_simulator.sh  calib-test.sh  compare-calib-darknet.py  compare-onnx.py  compare-psnr.py  compare-quant-darknet.py  compare-quant-darknet.sh  compare-quant-x330.py  compile_proto.sh  copy_images.sh  cpu_operation_test.py  fp32-infer-test.sh  function_test.py  install-mc.sh  lint.sh  pb-to-pbtxt.sh  pbtxt-to-pb.sh  prepare_test.sh  quant-test.sh  run_test_cpu.sh  run_test_gpu.sh  simulator_api_test.py  valid-test.sh  x220_quant_tuning.py  x330-compare-psnrs.py  x330-test.sh
simulator/src/: simulator.cpp  simulator_api.cpp
simulator/src/backends/: backend.cpp  backend_input_helper.cpp  cpu.cpp  cudnn.cpp
simulator/src/calibration/: calibrator.cpp  calibrator_factory.cpp  entropy2_calibrator.cpp  entropy_calibrator.cpp  histogram.cpp  histogram_calibrator.cpp  max.cpp  max_calibrator.cpp  percentile_calibrator.cpp
simulator/src/core/: aixh.pb.cc  arguments.cpp  datatype.cpp  dump.cpp  image.cpp  inference_context.cpp  spear.proto.e8e8.pb.cc  utility.cpp
simulator/src/dump/: dump.cpp  dump_binary.cpp  dump_factory.cpp  dump_hex.cpp  dump_output.cpp  dump_path_helper.cpp  dump_space.cpp
simulator/src/network/: descriptor.cpp  dimension.cpp  layer.cpp  network.cpp  tensor.cpp
simulator/src/parser/: aix_graph_parser.cpp  parser.cpp  spear_graph_parser.cpp
simulator/src/x330/: x330_operation.cpp
(+626 files in other folders)
